--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -11,7 +11,7 @@ $transition: 0.3s ease-in-out;
 
 
 // Fonts
-// $font: 'font', sans-serif;
+$agrandir: 'agrandir', sans-serif;
 
 
 // Mediaqueries
