--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -16,9 +16,12 @@ html{
 }
 
 body{
-    font: 1.6em / 1.2 sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    // font: 1.6em / 1.2 sans-serif;
+    // -webkit-font-smoothing: antialiased;
+    // -moz-osx-font-smoothing: grayscale;
+    font-family: $agrandir;
+    font-size: 1.6rem;
+    line-height: 1.2;
 }
 
 h1{
